--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "next": "16.1.0",
     "react": "19.2.3",
     "react-dom": "19.2.3",
+    "sharp": "^0.34.5",
     "strapi-plugin-populate-deep": "^3.0.1"
   },
   "devDependencies": {
